Tests/Runtime2/Error/Nested/.build/innergoal.pr
[
  {
    "name": "InnerGoal",
    "description": "Calls InnerGoal ThrowInnerError, and if that step errors, calls InnerHandler. The \u0027pr: null\u0027 note is not mapped to an engine action because no corresponding action/parameter exists in the provided action set.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "call ThrowInnerError, on error call InnerHandler",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "goal",
            "action": "call",
            "parameters": [
              {
                "name": "GoalName",
                "value": {
                  "name": "ThrowInnerError"
                },
                "type": "goal.call"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": {
          "goal": {
            "name": "InnerHandler",
            "description": null,
            "parallel": false,
            "parameters": null,
            "prPath": null
          },
          "retryCount": null,
          "retryOverMs": null,
          "order": null,
          "ignoreError": false,
          "message": null,
          "statusCode": null,
          "key": null
        },
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/InnerGoal.goal",
    "prPath": "/.build/innergoal.pr",
    "hash": "a60dacbb90144444eb57f4e9cb6fa09714365e4b956c674f73d69b64dc38f5c7",
    "builderVersion": "0.3",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]